--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
@@ -22,25 +23,59 @@ body{
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid rgb(214, 214, 214);
+    position: relative;
 }
 
 .tab-box .tab-btn{
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     color: #383838;
     background: none;
     border: none;
     padding: 20px;
     cursor: pointer;
 }
-
+.tab-box .tab-btn.active{
+    color: #5039ff;
+}
 .content-box{
     padding: 25px;
 }
 
 .content-box .content{
     display: none;
+    animation: moving .5s ease;
+}
+@keyframes moving{
+    from{
+        transform: translateX(50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+.content-box .content.active{
+    display: block;
 }
 .content-box .content h2{
     margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 600;
+}
+.content-box .content p{
+    letter-spacing: 1.5px;
+    line-height: 30px;
+    font-size: 16px;
+}
+.line{
+    position: absolute;
+    top: 59px;
+    left: 0;
+    width: 90px;
+    height: 4px;
+    background-color: #5039ff;
+    border-radius: 50px;
+    transition: all .3s ease-in-out;
 }
